[gd_scene load_steps=3 format=3 uid="uid://dciw03lb6qvj2"]

[ext_resource type="Script" uid="uid://dctv4ju75q28x" path="res://Scripts/Login/login.gd" id="1_eiqty"]
[ext_resource type="FontFile" uid="uid://8qixsdylbpdo" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_kxikt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_eiqty")

[node name="Username" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -217.0
offset_right = 5.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -217.0
offset_right = 214.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
secret = true

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -301.5
offset_right = 20.0
offset_bottom = -278.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24

[node name="EmailTag" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -249.0
offset_right = -29.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Email"

[node name="PasswordTag" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.5
offset_top = -248.0
offset_right = 215.5
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Password"

[node name="Login" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -171.0
offset_right = 215.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Login"

[node name="Register" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -171.0
offset_right = 6.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Register"

[node name="BackMainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -133.0
offset_right = 221.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Return To Main Menu"

[node name="ForgotPassword" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -94.5
offset_right = 221.0
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kxikt")
theme_override_font_sizes/font_size = 24
text = "Forgot Password?"

[connection signal="button_up" from="Login" to="." method="_on_login_button_up"]
[connection signal="button_up" from="Register" to="." method="_on_register_button_up"]
[connection signal="pressed" from="BackMainMenu" to="." method="_on_back_main_menu_pressed"]
[connection signal="pressed" from="ForgotPassword" to="." method="_on_forgot_password_pressed"]
